--- a/Devoir3GLAspect/src/application/AjoutArticle.fxml
+++ b/Devoir3GLAspect/src/application/AjoutArticle.fxml
@@ -5,22 +5,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="206.0" prefWidth="269.0"
-	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="application.ControllerAjoutArticle">
+<AnchorPane prefHeight="206.0" prefWidth="269.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControllerAjoutArticle">
 	<children>
-		<Button fx:id="butAjout" layoutX="66.0" layoutY="166.0"
-			mnemonicParsing="false" onAction="#OnclickAjouter" text="Ajouter" />
+		<Button fx:id="butAjout" layoutX="66.0" layoutY="166.0" mnemonicParsing="false" onAction="#OnclickAjouter" text="Ajouter" />
 		<Label layoutX="14.0" layoutY="14.0" text="Nom article :" />
 		<Label layoutX="14.0" layoutY="62.0" text="Prix :" />
 		<Label layoutX="14.0" layoutY="111.0" text="Quantité :" />
-		<TextField fx:id="txtNameArticle" layoutX="14.0" layoutY="31.0"
-			prefHeight="25.0" prefWidth="250.0" />
-		<TextField fx:id="txtPriceArticle" layoutX="14.0" layoutY="79.0"
-			prefHeight="25.0" prefWidth="52.0" />
-		<TextField fx:id="txtQuantity" layoutX="14.0" layoutY="134.0"
-			prefHeight="25.0" prefWidth="52.0" />
-		<Button fx:id="butRetour" layoutX="165.0" layoutY="166.0"
-			mnemonicParsing="false" onAction="#OnclickRetour" text="Retour" />
+		<TextField fx:id="txtNameArticle" layoutX="14.0" layoutY="31.0" prefHeight="25.0" prefWidth="250.0" />
+		<TextField fx:id="txtPriceArticle" layoutX="14.0" layoutY="79.0" prefHeight="25.0" prefWidth="52.0" />
+		<TextField fx:id="txtQuantity" layoutX="14.0" layoutY="134.0" prefHeight="25.0" prefWidth="52.0" />
+		<Button layoutX="165.0" layoutY="166.0" mnemonicParsing="false" onAction="#OnclickRetour" text="Retour" />
+      <TextField fx:id="txtIDArticle" layoutX="94.0" layoutY="79.0" prefHeight="25.0" prefWidth="169.0" />
+      <Label layoutX="94.0" layoutY="62.0" text="ID Article :" />
 	</children>
 </AnchorPane>
