Les patterns OK, les deux cas d'utilisation OK, Test : 6/10 (plutot simple), Aspect 1/3(pas bon je pense ...), et finalement Metrics tout est vert ! (Utilisez Luna pour Metrix, mais le programme ne compilera pas dessus), sinon fonctionne bien sur Oxygen

--- a/Devoir3GLAspect/src/application/ResumeVente.fxml
+++ b/Devoir3GLAspect/src/application/ResumeVente.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="221.0" prefWidth="445.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControllerResumeVente">
+<AnchorPane prefHeight="221.0" prefWidth="445.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button layoutX="19.0" layoutY="150.0" mnemonicParsing="false" onAction="#OnClickPayerMaintenant" text="Payer Maintenant" />
       <Button layoutX="19.0" layoutY="182.0" mnemonicParsing="false" onAction="#OnClickPayerPlusTard" prefHeight="27.0" prefWidth="126.0" text="Payer plus tard" />
