--- a/Devoir3GLAspect/src/application/NouvelleVente.fxml
+++ b/Devoir3GLAspect/src/application/NouvelleVente.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="504.0" prefWidth="564.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="application.ControllerNouvelleVente">
+<AnchorPane prefHeight="504.0" prefWidth="564.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControllerNouvelleVente">
    <children>
       <TextField id="txtIDMembre" fx:id="txtIDMembre" layoutX="24.0" layoutY="41.0" prefHeight="25.0" prefWidth="250.0" />
       <Label layoutX="24.0" layoutY="24.0" prefHeight="17.0" prefWidth="79.0" text="ID Membre :" />
@@ -14,7 +13,7 @@
       <TextField id="txtIDArticle" fx:id="txtIDArticle" layoutX="24.0" layoutY="96.0" prefHeight="25.0" prefWidth="91.0" />
       <Button id="butScanArticle" layoutX="24.0" layoutY="132.0" mnemonicParsing="false" onAction="#onClickScanArticle" text="Scan Article" />
       <TableView id="TableView" fx:id="TableView" layoutX="24.0" layoutY="170.0" prefHeight="277.0" prefWidth="511.0" />
-      <Button id="butFin" layoutX="24.0" layoutY="461.0" mnemonicParsing="false" onAction="#OnClickSuivant" text="Suivant" />
-      <Button id="butAnnuler" layoutX="477.0" layoutY="461.0" mnemonicParsing="false" onAction="#OnClickAnnuler" text="Annuler" />
+      <Button id="butFin" layoutX="480.0" layoutY="461.0" mnemonicParsing="false" onAction="#OnClickSuivant" text="Suivant" />
+      <Button id="butAnnuler" layoutX="412.0" layoutY="461.0" mnemonicParsing="false" onAction="#OnClickAnnuler" text="Annuler" />
    </children>
 </AnchorPane>
