--- a/Devoir3GLAspect/src/application/Paiement.fxml
+++ b/Devoir3GLAspect/src/application/Paiement.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="202.0" prefWidth="270.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="202.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="144.0" layoutY="150.0" mnemonicParsing="false" onAction="#OnClickPayer" text="Payer" />
-      <Button layoutX="198.0" layoutY="150.0" mnemonicParsing="false" onAction="#OnClickAnnuler" text="Annuler" />
+      <Button layoutX="210.0" layoutY="163.0" mnemonicParsing="false" onAction="#OnClickPayer" text="Payer" />
+      <Button layoutX="135.0" layoutY="163.0" mnemonicParsing="false" onAction="#OnClickAnnuler" text="Annuler" />
       <ComboBox fx:id="cbTypePaiement" layoutX="14.0" layoutY="58.0" onAction="#OnClickMethodePaiement" prefWidth="150.0" />
       <Label layoutX="14.0" layoutY="29.0" text="Type de Paiement :" />
       <Label layoutX="14.0" layoutY="106.0" text="Montant :" />
